# openapi/openapi.yaml
@@ -33,6 +33,10 @@ paths:
     $ref: './customer-groups/paths/customer-groups.yaml'
   '/customer-groups/{customerGroupId}':
     $ref: './customer-groups/paths/customer-groups.id.yaml'
+  /languages:
+    $ref: './languages/paths/languages.yaml'
+  '/languages/{languageId}':
+    $ref: './languages/paths/languages.id.yaml'
 
 
 ### BELOW: Paths that have not been updated
@@ -2028,196 +2032,6 @@ paths:
                 $ref: '#/components/schemas/Error'
       operationId: delete-discounts-discountId
       description: Deletes a Discount
-  /languages:
-    get:
-      summary: Get Languages
-      tags:
-        - Languages
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/LanguageCollection'
-              examples:
-                full-example:
-                  value:
-                    data:
-                      - id: 6z8m9gmj
-                        name: English
-                        lang: en
-                        iso: gb
-                        default: true
-                        enabled: true
-                        current: false
-                    links:
-                      first: 'http://storefront.test/api/v1/languages?page=1'
-                      last: 'http://storfront.test/api/v1/languages?page=1'
-                      prev: null
-                      next: null
-                    meta:
-                      current_page: 1
-                      from: 1
-                      last_page: 1
-                      path: 'http://storefront.test/api/v1/languages'
-                      per_page: 15
-                      to: 1
-                      total: 1
-      operationId: get-languages
-      description: Returns a paginated list of Languages
-    post:
-      summary: Create Language
-      tags:
-        - Languages
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/LanguageResponse'
-              examples:
-                create-response-example:
-                  value:
-                    data:
-                      id: 0pgekgw6
-                      name: Français
-                      lang: fr
-                      iso: FR
-                      default: false
-                      enabled: false
-                      current: false
-        '422':
-          description: Unprocessable Entity
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  name:
-                    type: array
-                    items:
-                      type: string
-                  lang:
-                    type: array
-                    items:
-                      type: string
-                  iso:
-                    type: array
-                    items:
-                      type: string
-              examples:
-                unprocessable-example:
-                  value:
-                    name:
-                      - The name field is required.
-                    lang:
-                      - The lang field is required.
-                    iso:
-                      - The iso field is required.
-                      - The iso has already been taken.
-      operationId: post-languages
-      description: Create a new language
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                lang:
-                  type: string
-                iso:
-                  type: string
-                  description: Unique
-                enabled:
-                  type: boolean
-                default:
-                  type: boolean
-                current:
-                  type: boolean
-              required:
-                - name
-                - lang
-                - iso
-            examples:
-              minimal-create-example:
-                value:
-                  name: Français
-                  lang: fr
-                  iso: FR
-  '/languages/{languageId}':
-    parameters:
-      - schema:
-          type: string
-        name: languageId
-        in: path
-        required: true
-    get:
-      summary: Get Language
-      tags:
-        - Languages
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/LanguageResponse'
-        '404':
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-      operationId: get-languages-languageId
-      description: Get a Language by ID
-    put:
-      summary: Update Language
-      tags:
-        - Languages
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/LanguageResponse'
-              examples:
-                language-example:
-                  value:
-                    data:
-                      id: 6z8m9gmj
-                      name: English
-                      lang: en
-                      iso: gb
-                      default: true
-                      enabled: true
-                      current: false
-      operationId: put-languages-languageId
-      description: "Update a Language using it's ID"
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Language'
-    delete:
-      summary: Delete Language
-      tags:
-        - Languages
-      responses:
-        '204':
-          description: No Content
-        '404':
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-      operationId: delete-languages-languageId
-      description: Delete a Language by its ID
   /layouts:
     get:
       summary: Get Layouts
